--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
             <artifactId>screw-core</artifactId>
             <version>1.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
